--- a/src/main/webapp/start.html
+++ b/src/main/webapp/start.html
@@ -122,7 +122,7 @@
 						しりとりを始めましょう
 					</h2>
 					<div class="mt-5 w-full max-w-[440px]">
-						<form action="chat" method="post" class="grid gap-x-3 gap-y-2 sm:grid-cols-2 sm:gap-y-0">
+						<form action="start" method="post" class="grid gap-x-3 gap-y-2 sm:grid-cols-2 sm:gap-y-0">
 							<input type="text" class="username-input" maxlength="8" placeholder="name" />
 							<button
 								class="relative flex h-12 items-center justify-center rounded-md text-center text-base font-medium bg-[#3C46FF] text-[#fff] hover:bg-[#0000FF]">
