Update start.html with new text for Sato

--- a/src/main/webapp/start.html
+++ b/src/main/webapp/start.html
@@ -134,7 +134,7 @@
 				<div class="mt-10 flex flex-col justify-center">
 					<div class="flex justify-center text-gray-300 md:mb-3"></div>
 					<div class="flex gap-3 py-3 text-xs text-gray-500">
-						<a>Sato</a><span class="text-gray-600">|</span><a>Yoshida「かかってこいよ」</a>
+						<a>Sato「みかん！」</a><span class="text-gray-600">|</span><a>Yoshida「かかってこいよ」</a>
 					</div>
 				</div>
 			</div>
