Add new animal "ギャル" to start.html

--- a/src/main/webapp/start.html
+++ b/src/main/webapp/start.html
@@ -102,6 +102,7 @@
 								<span class="inline transition-opacity duration-300">パンダ</span>
 								<span class="inline transition-opacity duration-300">ダチョウ</span>
 								<span class="inline transition-opacity duration-300">ウサギ</span>
+								<span class="inline transition-opacity duration-300">ギャル</span>	
 								<span class="inline-block font-circle delay-[300ms]">●</span>
 							</div>
 						</div>
