Remove unnecessary JavaScript code for form submission

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -107,41 +107,6 @@
 		</div>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<script src="js/siritori.js"></script>
-		<script>
-			// テキストエリアでエンターキーが押されたときにフォームを送信
-			$("#input_text").on("keydown", function (e) {
-				if (e.keyCode === 13) {
-					// エンターキーのキーコードは13
-					$("#shiritoriForm").submit(); // フォームを送信
-				}
-			});
-
-			// フォームの送信を検知
-			$("#shiritoriForm").on("submit", function (e) {
-				e.preventDefault(); // フォームのデフォルトの送信動作をキャンセル
-
-				$.ajax({
-					url: $(this).attr("action"), // フォームのaction属性からURLを取得
-					type: "POST", // リクエストのタイプをPOSTに設定
-					data: $(this).serialize(), // フォームのデータをシリアライズ
-					success: function (data) {
-						// リクエストが成功したときの処理をここに書く
-						console.log(data);
-					},
-					error: function (xhr, status, error) {
-						// リクエストが失敗したときの処理をここに書く
-						console.error(error);
-					},
-					complete: function () {
-						// リクエストが完了したとき（成功・失敗に関わらず）の処理をここに書く
-						// テキストエリアの内容を空にする
-						//$("#input_text").val("");
-
-						// 送信ボタンを再度有効化
-						$("#submit_btn").prop("disabled", false);
-					},
-				});
-			});
-		</script>
+		<script></script>
 	</body>
 </html>
