--- a/src/main/webapp/start.html
+++ b/src/main/webapp/start.html
@@ -123,7 +123,7 @@
 					<nav
 						class="left-0 top-8 flex w-full px-6 sm:absolute md:top-[22px] md:px-6 lg:px-8"
 					>
-						<h1 aria-label="OpenAIのChatGPT">
+						<h1 aria-label="">
 							<div
 								class="flex cursor-default items-center text-[20px] font-bold leading-none lg:text-[22px]"
 							>
@@ -176,7 +176,7 @@
 					<nav
 						class="flex w-full justify-start px-6 pb-8 md:hidden md:px-6 lg:px-8"
 					>
-						<h1 aria-label="ChatGPTみたいなやつ">
+						<h1 aria-label="">
 							<div
 								class="flex cursor-default items-center text-[20px] font-bold leading-none lg:text-[22px]"
 							>
