--- a/src/main/webapp/chat.html
+++ b/src/main/webapp/chat.html
@@ -5,19 +5,29 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="author" content="Sajjad Hussain" />
 		<title>Chat GPT Kit</title>
+
+		<!-- START EXTERNAL CSS RESOURCES -->
+
+		<!-- bootstrap -->
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
 			rel="stylesheet"
 		/>
+
 		<link
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
 			rel="stylesheet"
 		/>
+
+		<!-- START INTERNAL CSS RESOURCES -->
+
+		<!-- favicon -->
 		<link
 			rel="shortcut icon"
 			href="images/chatgpt-favicon.png"
 			type="image/x-icon"
 		/>
+		<!-- style -->
 		<link rel="stylesheet" href="css/style.css" />
 	</head>
 
@@ -354,7 +364,7 @@
 							<div class="chat-icon">
 								<img class="chatgpt-icon" src="images/user-icon.png" />
 							</div>
-							<div class="chat-txt">who are you?</div>
+							<div class="chat-txt"></div>
 						</div>
 
 						<!-- START GPT CHAT -->
@@ -362,13 +372,7 @@
 							<div class="chat-icon">
 								<img class="chatgpt-icon" src="images/chatgpt-icon.png" />
 							</div>
-							<div class="chat-txt">
-								I am ChatGPT, a large language model developed by OpenAI. I am
-								an artificial intelligence designed to process and generate
-								human-like text based on the input provided to me. I am here to
-								assist you with any questions or tasks you may have to the best
-								of my abilities!
-							</div>
+							<div class="chat-txt"></div>
 						</div>
 					</div>
 
@@ -377,20 +381,26 @@
 						<div class="row">
 							<div class="col-12 chat-inputs-area-inner">
 								<form
-									action=""
-									method="POST"
-									id="chat-form"
-									class="row chat-inputs-container d-flex align-items-center"
+									action="chat"
+									method="post"
+									id="shiritoriForm"
+									class="row chat-inputs-container"
 								>
 									<textarea
-										name="message"
-										id="message"
+										name="word"
+										id="input_text"
 										class="col-11"
-										placeholder="Send a message"
+										placeholder="「り」から始まる言葉"
 									></textarea>
-									<button type="submit" class="col-1">
+									<button type="submit" class="col-1" id="submit_btn">
 										<i class="fa fa-paper-plane" aria-hidden="true"></i>
 									</button>
+									<button type="button" id="record_btn">
+										<i class="fas fa-microphone"></i>
+										<span id="record_btn_text">マイク</span>
+									</button>
+									<input type="checkbox" id="check" />
+									<label class="check" for="check">CPU読み上げ</label>
 								</form>
 							</div>
 						</div>
@@ -401,8 +411,14 @@
 		</div>
 
 		<!-- START EXTERNAL JS RESOURCES -->
+		<!-- jquery -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+		<!-- material-ui -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/material-ui/5.0.0-beta.5/index.js"></script>
+		<!-- bootstrap -->
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/material-ui/5.0.0-beta.5/index.js"></script>
+
+		<!-- START INTERNAL JS RESOURCES -->
+		<script src="js/siritori.js"></script>
 	</body>
 </html>
