--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Wiki しりとり AI</title>
+		<!-- normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css -->
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
