Update chat content area ID and input text ID

--- a/src/main/webapp/chat.html
+++ b/src/main/webapp/chat.html
@@ -204,7 +204,7 @@
 
 				<!-- START CONTENT -->
 				<div class="content p-0 pt-2 col-lg-9 col-md-12">
-					<div class="chat-content-area">
+					<div id="chat-content-area">
 						<!-- START USER CHAT -->
 						<div class="row user-chat-box">
 							<div class="chat-icon">
