Add required attribute to user input field

--- a/src/main/webapp/start.html
+++ b/src/main/webapp/start.html
@@ -9,7 +9,7 @@
 		/>
 		<!-- SERP 検索エンジン結果ページのスニペット -->
 		<meta name="description"
-		content="shiritoriは、Wikipediaから集めたデータを使ってしりとりができます。読み間違いは許してください。
+		content="shiritoriは、Wikipediaから集めたデータを使ってしりとりができます。読み間違いは許してください。"
 		/>
 		<meta
 			property=" og:description"
@@ -205,6 +205,7 @@
 									maxlength="8"
 									name="user"
 									placeholder="name"
+									required
 								/>
 								<button
 									class="relative flex h-12 items-center justify-center rounded-md text-center text-base font-medium bg-[#3C46FF] text-[#fff] hover:bg-[#0000FF]"
