Add ScoreServlet for score update

--- a/src/main/webapp/chat.html
+++ b/src/main/webapp/chat.html
@@ -164,6 +164,39 @@
 						</div>
 					</div>
 
+					<!-- START SCORE REGISTER FORM-->
+					<div class="row">
+						<div class="col-12">
+							<form
+								action=""
+								method="POST"
+								id="score-register-form"
+								class="row score-register-form"
+							>
+								<div class="col-12">
+									<label for="score-register" class="form-label"
+										>Score Register</label
+									>
+									<input
+										type="text"
+										class="form-control"
+										id="score-register"
+										name="score-register"
+										placeholder="Enter your name"
+									/>
+								</div>
+								<div class="col-12">
+									<input type="hidden" id="score" name="score" />
+								</div>
+								<div class="col-12">
+									<button type="submit" class="btn btn-primary w-100">
+										Register
+									</button>
+								</div>
+							</form>
+						</div>
+					</div>
+
 					<div class="row">
 						<div class="col-12">
 							<ul class="list-unstyled">
