--- a/src/main/webapp/chat.html
+++ b/src/main/webapp/chat.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="author" content="Sajjad Hussain" />
-		<title>Chat GPT Kit</title>
+		<title>shiritori</title>
 
 		<!-- START EXTERNAL CSS RESOURCES -->
 
@@ -24,7 +24,7 @@
 		<!-- favicon -->
 		<link
 			rel="shortcut icon"
-			href="images/chatgpt-favicon.png"
+			href="images/リンゴゴリララッパパセリ.png"
 			type="image/x-icon"
 		/>
 		<!-- style -->
@@ -39,11 +39,55 @@
 				<div class="side-nav col-lg-3 col-md-12">
 					<!-- START NEW CHAT BUTTON -->
 					<div class="row p-2">
-						<div class="chat-btn d-flex align-items-center">
+						<div class="chat-btn d-flex align-items-center" id="chat-btn>
 							<span class="d-block">+ New Chat</span>
 						</div>
 					</div>
+					<div class="row p-2">
+						<div class="chat-btn d-flex align-items-center" id="send-score">
+							<!-- ボタンにdata-toggleとdata-targetを追加 -->
+							<span
+								class="d-block"
+								data-toggle="modal"
+								data-target="#scoreModal"
+							>
+								> Score : <span id="score">0</span>
+							</span>
+						</div>
+					</div>
 
+					<!-- モーダルのHTML -->
+					<div
+						class="modal fade"
+						id="scoreModal"
+						tabindex="-1"
+						role="dialog"
+						aria-labelledby="scoreModalLabel"
+						aria-hidden="true"
+					>
+						<div class="modal-dialog" role="document">
+							<div class="modal-content">
+								<div class="modal-header">
+									<h5 class="modal-title" id="scoreModalLabel">Game Score</h5>
+									<button
+										type="button"
+										class="close"
+										data-dismiss="modal"
+										aria-label="Close"
+									>
+										<span aria-hidden="true">&times;</span>
+									</button>
+								</div>
+								<div class="modal-body">
+									<p id="totalScore">Total Score:</p>
+									<button id="submitScore" class="btn btn-primary">
+										Submit
+									</button>
+								</div>
+							</div>
+						</div>
+					</div>
+					<!--  -->
 					<div class="row">
 						<div class="col-12">
 							<ul class="list-unstyled">
@@ -63,8 +107,8 @@
 
 								<!-- START LOG OUT -->
 								<li class="nav-item">
-									<a class="nav-link text-white" href="#">
-										<i class="fas fa-sign-out-alt"></i> Log Out
+									<a class="nav-link text-white" href="start">
+										<i class="fas fa-sign-out-alt"></i> Back to Home
 									</a>
 								</li>
 							</ul>
@@ -74,179 +118,20 @@
 
 				<!-- START CONTENT -->
 				<div class="content p-0 pt-2 col-lg-9 col-md-12">
+					<!-- START CHAT HEADER -->
 					<div id="chat-content-area">
-						<!-- START USER CHAT -->
-						<div class="row user-chat-box">
-							<div class="chat-icon">
-								<img class="chatgpt-icon" src="images/user-icon.png" />
-							</div>
-							<div class="chat-txt">who are you?</div>
-						</div>
-
 						<!-- START GPT CHAT -->
 						<div class="row gpt-chat-box">
 							<div class="chat-icon">
-								<img class="chatgpt-icon" src="images/chatgpt-icon.png" />
+								<img
+									class="chatgpt-icon"
+									src="images/Smirking-Face-Flat-icon.png"
+								/>
 							</div>
-							<div class="chat-txt">
-								I am ChatGPT, a large language model developed by OpenAI. I am
-								an artificial intelligence designed to process and generate
-								human-like text based on the input provided to me. I am here to
-								assist you with any questions or tasks you may have to the best
-								of my abilities!
-							</div>
-						</div>
-
-						<!-- START USER CHAT -->
-						<div class="row user-chat-box">
-							<div class="chat-icon">
-								<img class="chatgpt-icon" src="images/user-icon.png" />
-							</div>
-							<div class="chat-txt">who are you?</div>
-						</div>
-
-						<!-- START GPT CHAT -->
-						<div class="row gpt-chat-box">
-							<div class="chat-icon">
-								<img class="chatgpt-icon" src="images/chatgpt-icon.png" />
-							</div>
-							<div class="chat-txt">
-								I am ChatGPT, a large language model developed by OpenAI. I am
-								an artificial intelligence designed to process and generate
-								human-like text based on the input provided to me. I am here to
-								assist you with any questions or tasks you may have to the best
-								of my abilities!
-							</div>
-						</div>
-
-						<!-- START USER CHAT -->
-						<div class="row user-chat-box">
-							<div class="chat-icon">
-								<img class="chatgpt-icon" src="images/user-icon.png" />
-							</div>
-							<div class="chat-txt">who are you?</div>
-						</div>
-
-						<!-- START GPT CHAT -->
-						<div class="row gpt-chat-box">
-							<div class="chat-icon">
-								<img class="chatgpt-icon" src="images/chatgpt-icon.png" />
-							</div>
-							<div class="chat-txt">
-								I am ChatGPT, a large language model developed by OpenAI. I am
-								an artificial intelligence designed to process and generate
-								human-like text based on the input provided to me. I am here to
-								assist you with any questions or tasks you may have to the best
-								of my abilities!
-							</div>
-						</div>
-
-						<!-- START USER CHAT -->
-						<div class="row user-chat-box">
-							<div class="chat-icon">
-								<img class="chatgpt-icon" src="images/user-icon.png" />
-							</div>
-							<div class="chat-txt">who are you?</div>
-						</div>
-
-						<!-- START GPT CHAT -->
-						<div class="row gpt-chat-box">
-							<div class="chat-icon">
-								<img class="chatgpt-icon" src="images/chatgpt-icon.png" />
-							</div>
-							<div class="chat-txt">
-								I am ChatGPT, a large language model developed by OpenAI. I am
-								an artificial intelligence designed to process and generate
-								human-like text based on the input provided to me. I am here to
-								assist you with any questions or tasks you may have to the best
-								of my abilities!
-							</div>
-						</div>
-
-						<!-- START USER CHAT -->
-						<div class="row user-chat-box">
-							<div class="chat-icon">
-								<img class="chatgpt-icon" src="images/user-icon.png" />
-							</div>
-							<div class="chat-txt">who are you?</div>
-						</div>
-
-						<!-- START GPT CHAT -->
-						<div class="row gpt-chat-box">
-							<div class="chat-icon">
-								<img class="chatgpt-icon" src="images/chatgpt-icon.png" />
-							</div>
-							<div class="chat-txt">
-								I am ChatGPT, a large language model developed by OpenAI. I am
-								an artificial intelligence designed to process and generate
-								human-like text based on the input provided to me. I am here to
-								assist you with any questions or tasks you may have to the best
-								of my abilities!
-							</div>
-						</div>
-
-						<!-- START USER CHAT -->
-						<div class="row user-chat-box">
-							<div class="chat-icon">
-								<img class="chatgpt-icon" src="images/user-icon.png" />
-							</div>
-							<div class="chat-txt">who are you?</div>
-						</div>
-
-						<!-- START GPT CHAT -->
-						<div class="row gpt-chat-box">
-							<div class="chat-icon">
-								<img class="chatgpt-icon" src="images/chatgpt-icon.png" />
-							</div>
-							<div class="chat-txt">
-								I am ChatGPT, a large language model developed by OpenAI. I am
-								an artificial intelligence designed to process and generate
-								human-like text based on the input provided to me. I am here to
-								assist you with any questions or tasks you may have to the best
-								of my abilities!
-							</div>
-						</div>
-
-						<!-- START USER CHAT -->
-						<div class="row user-chat-box">
-							<div class="chat-icon">
-								<img class="chatgpt-icon" src="images/user-icon.png" />
-							</div>
-							<div class="chat-txt">who are you?</div>
-						</div>
-
-						<!-- START GPT CHAT -->
-						<div class="row gpt-chat-box">
-							<div class="chat-icon">
-								<img class="chatgpt-icon" src="images/chatgpt-icon.png" />
-							</div>
-							<div class="chat-txt">
-								I am ChatGPT, a large language model developed by OpenAI. I am
-								an artificial intelligence designed to process and generate
-								human-like text based on the input provided to me. I am here to
-								assist you with any questions or tasks you may have to the best
-								of my abilities!
-							</div>
-						</div>
-
-						<!-- START USER CHAT -->
-						<div class="row user-chat-box">
-							<div class="chat-icon">
-								<img class="chatgpt-icon" src="images/user-icon.png" />
-							</div>
-							<div class="chat-txt"></div>
-						</div>
-
-						<!-- START GPT CHAT -->
-						<div class="row gpt-chat-box">
-							<div class="chat-icon">
-								<img class="chatgpt-icon" src="images/chatgpt-icon.png" />
-							</div>
-							<div class="chat-txt"></div>
+							<div class="chat-txt">「しりとり」</div>
 						</div>
 					</div>
 
-					<!-- START CHAT INPUTS -->
 					<div class="chat-input-area overflow-hidden">
 						<div class="row">
 							<div class="col-12 chat-inputs-area-inner">
@@ -256,21 +141,72 @@
 									id="shiritoriForm"
 									class="row chat-inputs-container"
 								>
-									<textarea
-										name="word"
-										id="input_text"
-										class="col-11"
-										placeholder="「り」から始まる言葉"
-									></textarea>
-									<button type="submit" class="col-1" id="submit_btn">
-										<i class="fa fa-paper-plane" aria-hidden="true"></i>
-									</button>
-									<button type="button" id="record_btn">
-										<i class="fas fa-microphone"></i>
-										<span id="record_btn_text">マイク</span>
-									</button>
-									<input type="checkbox" id="check" />
-									<label class="check" for="check">CPU読み上げ</label>
+									<div
+										class="col-auto d-flex justify-content-center align-items-center"
+									>
+										<button
+											type="button"
+											id="record_btn"
+											class="btn btn-outline-primary"
+										>
+											<i class="fas fa-microphone"></i>
+										</button>
+									</div>
+									<div class="col">
+										<textarea
+											name="userMsg"
+											id="input_text"
+											class="form-control"
+											placeholder="「り」から始まる言葉"
+										></textarea>
+									</div>
+									<div
+										class="col-auto d-flex justify-content-center align-items-center"
+									>
+										<button
+											type="submit"
+											class="btn btn-primary"
+											id="submit_btn"
+										>
+											<i class="fa fa-paper-plane" aria-hidden="true"></i>
+										</button>
+									</div>
+									<div
+										class="col-auto form-check d-flex justify-content-center align-items-center"
+									>
+										<label
+											class="checkbox-container btn btn-secondary"
+											style="
+												position: relative;
+												padding: 5px;
+												border-radius: 5px;
+												width: 30px;
+												height: 30px;
+											"
+										>
+											<input type="checkbox" id="check" style="display: none" />
+											<i
+												class="fas fa-volume-mute unchecked-icon"
+												style="
+													position: absolute;
+													top: 50%;
+													left: 50%;
+													transform: translate(-50%, -50%);
+													color: #aaa;
+												"
+											></i>
+											<i
+												class="fas fa-volume-up checked-icon"
+												style="
+													position: absolute;
+													top: 50%;
+													left: 50%;
+													transform: translate(-50%, -50%);
+													color: #aaa;
+												"
+											></i>
+										</label>
+									</div>
 								</form>
 							</div>
 						</div>
@@ -290,5 +226,40 @@
 
 		<!-- START INTERNAL JS RESOURCES -->
 		<script src="js/siritori.js"></script>
+		<script>
+			$(document).ready(function () {
+				$("#submitScore").on("click", function (e) {
+					e.preventDefault();
+
+					var score = $("#totalScore").text();
+
+					$.ajax({
+						url: "/submit-score", // 送信先のURLを指定します
+						type: "POST", // HTTPメソッドを指定します
+						data: { score: score }, // 送信するデータを指定します
+						success: function (response) {
+							// レスポンスを受け取った後の処理を書きます
+							console.log("Score submitted successfully.");
+						},
+						error: function (error) {
+							// エラーが発生した場合の処理を書きます
+							console.log("Error in submitting score.");
+						},
+					});
+
+					// モーダルを閉じる
+					$("#scoreModal").modal("hide");
+				});
+			});
+
+			//send-scoreボタンを押したらモーダルを表示する
+			$("#send-score").on("click", function () {
+				$("#scoreModal").modal("show");
+			});
+
+			$('#chat-btn').on('click', function(e) {
+        location.reload();
+    });
+		</script>
 	</body>
 </html>
