Update style.css and chat.html

--- a/src/main/webapp/chat.html
+++ b/src/main/webapp/chat.html
@@ -28,7 +28,7 @@
 			type="image/x-icon"
 		/>
 		<!-- style -->
-		<link rel="stylesheet" href="css/style.css" />
+		<link rel="stylesheet" href="style.css" />
 	</head>
 
 	<body>
