Update title and favicon in chat.html, add .gitignore for build directory

--- a/src/main/webapp/chat.html
+++ b/src/main/webapp/chat.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta name="author" content="Sajjad Hussain" />
-	<title>shiritori</title>
+	<title>wikitori</title>
 
 	<!-- START EXTERNAL CSS RESOURCES -->
 
@@ -17,7 +17,7 @@
 	<!-- START INTERNAL CSS RESOURCES -->
 
 	<!-- favicon -->
-	<link rel="shortcut icon" href="images/リンゴゴリララッパパセリ.png" type="image/x-icon" />
+	<link rel="shortcut icon" href="images/1.png" type="image/x-icon" />
 	<!-- style -->
 	<link rel="stylesheet" href="style.css" />
 </head>
