--- a/src/main/webapp/chat.html
+++ b/src/main/webapp/chat.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<meta name="author" content="Sajjad Hussain" />
+
 	<title>wikitori</title>
 
 	<!-- START EXTERNAL CSS RESOURCES -->
@@ -167,7 +167,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
 	<!-- START INTERNAL JS RESOURCES -->
-	<script src="js/siritori.js"></script>
+	<script src="js/shiritori.js"></script>
 	<script>
 
 	</script>
