Update favicon image in chat.html

--- a/src/main/webapp/chat.html
+++ b/src/main/webapp/chat.html
@@ -17,7 +17,7 @@
 	<!-- START INTERNAL CSS RESOURCES -->
 
 	<!-- favicon -->
-	<link rel="shortcut icon" href="images/1.png" type="image/x-icon" />
+	<link rel="shortcut icon" href="images/1torii.png" type="image/x-icon" />
 	<!-- style -->
 	<link rel="stylesheet" href="style.css" />
 </head>
