Update title and favicon in index.html

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,7 +1,10 @@
 <html class="dark" style="color-scheme: dark" lang="ja-JP">
 	<head>
 		<meta charset="utf-8" />
-
+		<title>wikitori</title>
+		<!-- favicon -->
+		<link rel="shortcut icon" href="images/1torii.png" type="image/x-icon" />
+		<!-- style -->
 		<link rel="preconnect" href="https://cdn.oaistatic.com" />
 
 		<link
@@ -100,7 +103,7 @@
 							<div
 								class="flex cursor-default items-center text-[20px] font-bold leading-none lg:text-[22px]"
 							>
-								<div>Shiritori <span class="font-circle">●</span></div>
+								<div>Wikitori <span class="font-circle">●</span></div>
 							</div>
 						</h1>
 					</nav>
@@ -192,7 +195,7 @@
 						<div class="flex justify-center text-gray-300 md:mb-3">
 							<div class="flex gap-3 text-xs">
 								<!-- images -->
-								<img src="images/1torii.png" alt="" width="75px" />
+								<img src="images/1torii.png" alt="" width="100px" />
 							</div>
 						</div>
 						<div class="flex gap-3 py-3 text-xs text-gray-500">
@@ -241,25 +244,13 @@
 				"君の名は。",
 				"お名前は？",
 				"お名前をどうぞ。",
-				"名前を入力してください。",
 				"名前を入力してね。",
 				"あなたの名前は？",
 				"なまえを いれてください",
 				"なまえを いれてね",
 				"なまえは？",
-				"おなまえは？",
-				"おなまえを どうぞ",
-				"おなまえを いれてください",
-				"おなまえを いれてね",
-				"おなまえを おしえて",
-				"おなまえを おしえてね",
-				"おなまえを おしえてください",
-				"おなまえを おしえてくれる？",
 				"贅沢な名だね。",
-				"きょうからお前の名前は「ハゲ」だ。",
 				"お前の名前は「ハゲ」だ。",
-				"お前の名前は「ハゲ」だな。",
-				"お前の名前は「ハゲ」だな？",
 				"今からお前の名前は",
 			];
 
