--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,7 +3,11 @@
 		<meta charset="utf-8" />
 		<title>wikitori</title>
 		<!-- favicon -->
-		<link rel="shortcut icon" href="images/1torii.png" type="image/x-icon" />
+		<link
+			rel="shortcut icon"
+			href="images/TORII-removebg-preview.png"
+			type="image/x-icon"
+		/>
 		<!-- style -->
 		<link rel="preconnect" href="https://cdn.oaistatic.com" />
 
@@ -195,7 +199,11 @@
 						<div class="flex justify-center text-gray-300 md:mb-3">
 							<div class="flex gap-3 text-xs">
 								<!-- images -->
-								<img src="images/1torii.png" alt="" width="100px" />
+								<img
+									src="images/TORII-removebg-preview.png"
+									alt=""
+									width="75px"
+								/>
 							</div>
 						</div>
 						<div class="flex gap-3 py-3 text-xs text-gray-500">
