--- a/src/main/webapp/chat.html
+++ b/src/main/webapp/chat.html
@@ -38,178 +38,201 @@
 				<!-- START SIDENAV -->
 				<div class="side-nav col-lg-3 col-md-12">
 					<!-- START NEW CHAT BUTTON -->
-					<div class="row p-2">
-						<div class="chat-btn d-flex align-items-center" id="chat-btn>
-						<span class="d-block">+ New Chat</span>
-					</div>
-				</div>
-				<div class="row p-2">
-					<div class="chat-btn d-flex align-items-center" id="send-score">
-						<!-- ボタンにdata-toggleとdata-targetを追加 -->
-						<span class="d-block" data-toggle="modal" data-target="#scoreModal">
-							- Score : <span id="score" class="score-point">0</span>
-						</span>
-					</div>
-				</div>
-				<!-- START modal -->
-				<div
-					class="modal fade"
-					id="scoreModal"
-					tabindex="-1"
-					role="dialog"
-					aria-labelledby="scoreModalLabel"
-					aria-hidden="true"
-				>
-					<div class="modal-dialog" role="document">
-						<div class="modal-content">
-							<div class="modal-header bg-primary text-white">
-								<h5 class="modal-title" id="scoreModalLabel">Game Score</h5>
-								<button
-									type="button"
-									class="close"
-									data-dismiss="modal"
-									aria-label="Close"
-								>
-									<span aria-hidden="true">&times;</span>
-								</button>
+					<div class="chat-btn-container">
+						<div class="row p-2">
+							<div class="chat-btn d-flex align-items-center" id="chat-btn">
+								<span class="d-block">+ New Chat</span>
 							</div>
-							<div class="modal-body">
-								<!-- <form id="scoreForm" action="submitScore" method="post"> -->
-								<p id="totalScore">
-									Total Score: <span class="score-point">0</span>
-								</p>
-								<input type="hidden" name="score" value="0" />
-								<p>記録を送信します。</p>
-								<button id="submitScore" class="btn btn-primary" type="submit">
-									Submit
-								</button>
-								<!-- </form> -->
+						</div>
+						<!-- チャットの変更履歴 -->
+						<div class="chat-history-date">
+							<h3 class="history-date">Today</h3>
+						</div>
+						<div class="row p-2">
+							<div class="chat-items d-flex align-items-center" id="send-score">
+								<!-- ボタンにdata-toggleとdata-targetを追加 -->
+								<span
+									class="d-block"
+									data-toggle="modal"
+									data-target="#scoreModal"
+								>
+									- Score : <span id="score" class="score-point">0</span>
+								</span>
 							</div>
 						</div>
 					</div>
-				</div>
-
-				<!--  -->
-				<div class="row">
-					<div class="col-12">
-						<ul class="list-unstyled">
-							<!-- START SETTINGS -->
-							<li class="nav-item">
-								<a class="nav-link text-white" href="#">
-									<i class="fas fa-cog"></i> Settings
-								</a>
-							</li>
-
-							<!-- START GET HELP -->
-							<li class="nav-item">
-								<a class="nav-link text-white" href="#">
-									<i class="fas fa-question-circle"></i> Get Help
-								</a>
-							</li>
-
-							<!-- START LOG OUT -->
-							<li class="nav-item">
-								<a class="nav-link text-white" href="start">
-									<i class="fas fa-sign-out-alt"></i> Back to Home
-								</a>
-							</li>
-						</ul>
-					</div>
-				</div>
-			</div>
-
-			<!-- START CONTENT -->
-			<div class="content p-0 pt-2 col-lg-9 col-md-12">
-				<!-- START CHAT HEADER -->
-				<div id="chat-content-area">
-					<!-- START GPT CHAT -->
-					<div class="row gpt-chat-box">
-						<div class="chat-icon">
-							<img
-								class="chatgpt-icon"
-								src="images/Smirking-Face-Flat-icon.png"
-							/>
-						</div>
-						<div class="chat-txt">「しりとり」</div>
-					</div>
-				</div>
-
-				<div class="chat-input-area overflow-hidden">
-					<div class="row">
-						<div class="col-12 chat-inputs-area-inner">
-							<form
-								action="chat"
-								method="post"
-								id="shiritoriForm"
-								class="row chat-inputs-container"
-							>
-								<div
-									class="col-auto d-flex justify-content-center align-items-center"
-								>
+					<!-- START modal -->
+					<div
+						class="modal fade"
+						id="scoreModal"
+						tabindex="-1"
+						role="dialog"
+						aria-labelledby="scoreModalLabel"
+						aria-hidden="true"
+					>
+						<div class="modal-dialog" role="document">
+							<div class="modal-content">
+								<div class="modal-header bg-white border-bottom">
+									<h5 class="modal-title text-dark" id="scoreModalLabel">
+										Game Score
+									</h5>
 									<button
 										type="button"
-										id="record_btn"
-										class="btn btn-outline-primary"
+										class="close"
+										data-dismiss="modal"
+										aria-label="Close"
 									>
-										<i class="fas fa-microphone"></i>
+										<span aria-hidden="true">&times;</span>
 									</button>
 								</div>
-								<div class="col">
-									<textarea
-										name="userMsg"
-										id="input_text"
-										class="form-control"
-										placeholder="「り」から始まる言葉"
-									></textarea>
+								<div class="modal-body">
+									<div class="mb-3">
+										<p id="totalScore" class="mb-2">
+											Total score : <span class="score-point">0</span>
+										</p>
+										<input type="hidden" name="score" value="0" />
+										<p class="mb-4">記録を送信します。</p>
+									</div>
+									<div class="text-right">
+										<button
+											id="submitScore"
+											class="btn btn-primary"
+											type="submit"
+										>
+											Submit
+										</button>
+									</div>
 								</div>
-								<div
-									class="col-auto d-flex justify-content-center align-items-center"
-								>
-									<button type="submit" class="btn btn-primary" id="submit_btn">
-										<i class="fa fa-paper-plane" aria-hidden="true"></i>
-									</button>
-								</div>
-								<div
-									class="col-auto form-check d-flex justify-content-center align-items-center"
-								>
-									<label
-										class="checkbox-container btn btn-secondary"
-										style="
-											position: relative;
-											padding: 5px;
-											border-radius: 5px;
-											width: 30px;
-											height: 30px;
-										"
-									>
-										<input type="checkbox" id="check" style="display: none" />
-										<i
-											class="fas fa-volume-mute unchecked-icon"
-											style="
-												position: absolute;
-												top: 50%;
-												left: 50%;
-												transform: translate(-50%, -50%);
-												color: #aaa;
-											"
-										></i>
-										<i
-											class="fas fa-volume-up checked-icon"
-											style="
-												position: absolute;
-												top: 50%;
-												left: 50%;
-												transform: translate(-50%, -50%);
-												color: #aaa;
-											"
-										></i>
-									</label>
-								</div>
-							</form>
+							</div>
+						</div>
+					</div>
+
+					<!--  -->
+					<div class="row">
+						<div class="col-12">
+							<ul class="list-unstyled">
+								<!-- START SETTINGS -->
+								<li class="nav-item">
+									<a class="nav-link text-white" href="#">
+										<i class="fas fa-cog"></i> Settings
+									</a>
+								</li>
+
+								<!-- START GET HELP -->
+								<li class="nav-item">
+									<a class="nav-link text-white" href="#">
+										<i class="fas fa-question-circle"></i> Get Help
+									</a>
+								</li>
+
+								<!-- START LOG OUT -->
+								<li class="nav-item">
+									<a class="nav-link text-white" href="logout">
+										<i class="fas fa-sign-out-alt"></i> Back to Home
+									</a>
+								</li>
+							</ul>
 						</div>
 					</div>
 				</div>
-				<!--  -->
+
+				<!-- START CONTENT -->
+				<div class="content p-0 pt-2 col-lg-9 col-md-12">
+					<!-- START CHAT HEADER -->
+					<div id="chat-content-area">
+						<!-- START GPT CHAT -->
+						<div class="row gpt-chat-box">
+							<div class="chat-icon">
+								<img
+									class="chatgpt-icon"
+									src="images/Smirking-Face-Flat-icon.png"
+								/>
+							</div>
+							<div class="chat-txt">「しりとり」</div>
+						</div>
+					</div>
+
+					<div class="chat-input-area overflow-hidden">
+						<div class="row">
+							<div class="col-12 chat-inputs-area-inner">
+								<form
+									action="chat"
+									method="post"
+									id="shiritoriForm"
+									class="row chat-inputs-container"
+								>
+									<div
+										class="col-auto d-flex justify-content-center align-items-center"
+									>
+										<button
+											type="button"
+											id="record_btn"
+											class="btn btn-outline-primary"
+										>
+											<i class="fas fa-microphone"></i>
+										</button>
+									</div>
+									<div class="col">
+										<textarea
+											name="userMsg"
+											id="input_text"
+											class="form-control"
+											placeholder="「り」から始まる言葉"
+										></textarea>
+									</div>
+									<div
+										class="col-auto d-flex justify-content-center align-items-center"
+									>
+										<button
+											type="submit"
+											class="btn btn-primary"
+											id="submit_btn"
+										>
+											<i class="fa fa-paper-plane" aria-hidden="true"></i>
+										</button>
+									</div>
+									<div
+										class="col-auto form-check d-flex justify-content-center align-items-center"
+									>
+										<label
+											class="checkbox-container btn btn-secondary"
+											style="
+												position: relative;
+												padding: 5px;
+												border-radius: 5px;
+												width: 30px;
+												height: 30px;
+											"
+										>
+											<input type="checkbox" id="check" style="display: none" />
+											<i
+												class="fas fa-volume-mute unchecked-icon"
+												style="
+													position: absolute;
+													top: 50%;
+													left: 50%;
+													transform: translate(-50%, -50%);
+													color: #aaa;
+												"
+											></i>
+											<i
+												class="fas fa-volume-up checked-icon"
+												style="
+													position: absolute;
+													top: 50%;
+													left: 50%;
+													transform: translate(-50%, -50%);
+													color: #aaa;
+												"
+											></i>
+										</label>
+									</div>
+								</form>
+							</div>
+						</div>
+					</div>
+					<!--  -->
+				</div>
 			</div>
 		</div>
 
