--- a/src/main/webapp/chat.html
+++ b/src/main/webapp/chat.html
@@ -5,15 +5,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 		<title>wikitori</title>
-
 		<!-- START EXTERNAL CSS RESOURCES -->
-
 		<!-- bootstrap -->
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
 			rel="stylesheet"
 		/>
 
+		<!-- font-awesome -->
 		<link
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
 			rel="stylesheet"
@@ -28,7 +27,7 @@
 			type="image/x-icon"
 		/>
 		<!-- style -->
-		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="css/chat.css" />
 	</head>
 
 	<body>
