--- a/src/main/webapp/chat.html
+++ b/src/main/webapp/chat.html
@@ -183,9 +183,10 @@
 										class="col-auto d-flex justify-content-center align-items-center"
 									>
 										<button
-											type="submit"
+											type="button"
 											class="btn btn-primary"
 											id="submit_btn"
+											onclick="submitButtonClick()"
 										>
 											<i class="fa fa-paper-plane" aria-hidden="true"></i>
 										</button>
